<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AttendanceTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	
	<string name="scan">Scan</string>
	<string name="manualPostBtn">Post Entries</string>
	<string name="textPersonName">Enter first and last name</string>
	<string name="textPhoneNum">Enter phone number</string>
	<string name="textPostFeedback"> </string>
	<string name="textScanOptionA">OR Use button below to </string>
	<string name="textScanOptionB">Scan QR Code from your phone</string>
</resources>
