<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.attendancetracker.MainActivity" >

    <EditText
        android:id="@+id/textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" 
        android:hint="@string/textPhoneNum"/>

    <TextView
        android:id="@+id/textPostFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/manualPostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manualPostBtn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textScanOptionA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScanOptionA"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textScanOptionB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScanOptionB"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<Button
    android:id="@+id/scan_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/scan" />
    
    <TextView
    android:id="@+id/scan_format"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textIsSelectable="true" />
 
	<TextView
    android:id="@+id/scan_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textIsSelectable="true" />

	<AnalogClock
	    android:id="@+id/analogClock1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

	<TextView
    android:id="@+id/device_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textIsSelectable="true" />

</LinearLayout>
